nav header main

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello-Diagnostic</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <h1>Hello Diagnostic</h1>
+      <ul>
+        <li>Accueil</li>
+        <li>conatct</li>
+        <li>Qui sommes-nous</li>
+      </ul>
+    </nav>
+    <header>
+      <img
+        src="https://via.placeholder.com/200"
+        alt="logo en forme de maison et de téléphone en rouge et blanc"
+      />
+      <h2>Vous vendez ou louez votre bien immobilier?</h2>
+      <p>
+        Bienvenue chez Hello Diagnostic, votre partenaire confiance pour des
+        diagnostics immobiliers certifiés.<br />
+        Pour vendre, louer ou sécuriser votre investissement, notre équipe
+        assure des évaluations précises,<br />
+        transparentes et conformes aux normes les plus strictes.<br />
+        Optez pour Hello Diagnostic et assurez à votre bien une expertise fiable
+        et efficace.
+      </p>
+      <button>Contactez-nous</button>
+    </header>
+    <main>
+        <h3>Qui somme nous?</h2>
+            <p>
+                Bienvenue chez [Nom de l'Agence], votre partenaire de confiance pour tous vos besoins en diagnostic immobilier. Nous comprenons l'importance cruciale d'une évaluation précise et complète de votre bien, que ce soit pour la vente, la location ou simplement pour assurer la sécurité de votre investissement. Chez [Nom de l'Agence], notre équipe d'experts certifiés met son savoir-faire au service de votre tranquillité d'esprit. Avec un engagement inébranlable envers la qualité et la rigueur, nous vous accompagnons à chaque étape, offrant des diagnostics fiables et conformes aux normes les plus strictes. Faites de la confiance, de la transparence et de l'efficacité les piliers de votre expérience avec [Nom de l'Agence], car votre patrimoine mérite une expertise d'exception.</p>
+
+    </main>   
+  </body>
 </html>
