--- a/index.html
+++ b/index.html
@@ -22,22 +22,38 @@
         alt="logo en forme de maison et de téléphone en rouge et blanc"
       />
       <h2>Vous vendez ou louez votre bien immobilier?</h2>
-      <p>
-        Bienvenue chez Hello Diagnostic, votre partenaire confiance pour des
-        diagnostics immobiliers certifiés.<br />
-        Pour vendre, louer ou sécuriser votre investissement, notre équipe
-        assure des évaluations précises,<br />
-        transparentes et conformes aux normes les plus strictes.<br />
-        Optez pour Hello Diagnostic et assurez à votre bien une expertise fiable
-        et efficace.
-      </p>
+      <h3>
+        Découvrez la confiance immobilière avec Diagnostic. Diagnostics
+        certifiés, service efficace. Valorisez votre bien en toute tranquillité
+      </h3>
       <button>Contactez-nous</button>
     </header>
     <main>
-        <h3>Qui somme nous?</h2>
-            <p>
-                Bienvenue chez [Nom de l'Agence], votre partenaire de confiance pour tous vos besoins en diagnostic immobilier. Nous comprenons l'importance cruciale d'une évaluation précise et complète de votre bien, que ce soit pour la vente, la location ou simplement pour assurer la sécurité de votre investissement. Chez [Nom de l'Agence], notre équipe d'experts certifiés met son savoir-faire au service de votre tranquillité d'esprit. Avec un engagement inébranlable envers la qualité et la rigueur, nous vous accompagnons à chaque étape, offrant des diagnostics fiables et conformes aux normes les plus strictes. Faites de la confiance, de la transparence et de l'efficacité les piliers de votre expérience avec [Nom de l'Agence], car votre patrimoine mérite une expertise d'exception.</p>
-
-    </main>   
+      <h2>Qui somme nous?</h2>
+      <p>
+        Bienvenue chez Hello Diagnostic, votre partenaire de confiance pour tous
+        vos besoins en diagnostic immobilier. Nous comprenons l'importance
+        cruciale d'une évaluation précise et complète de votre bien, que ce soit
+        pour la vente, la location ou simplement pour assurer la sécurité de
+        votre investissement. Chez Hello Diagnostic, notre équipe d'experts
+        certifiés met son savoir-faire au service de votre tranquillité
+        d'esprit. Avec un engagement inébranlable envers la qualité et la
+        rigueur, nous vous accompagnons à chaque étape, offrant des diagnostics
+        fiables et conformes aux normes les plus strictes. Faites de la
+        confiance, de la transparence et de l'efficacité les piliers de votre
+        expérience avec Hello Diagnostic, car votre patrimoine mérite une
+        expertise d'exception.
+      </p>
+      <a href="tel:+33620601846">📱Appellez-nous</a>
+      <a href="mailto:4vqXp@example.com">📧Ecrivez-nous</a>
+    </main>
+    <footer>
+      <h3>Diagnostic Immobilier</h3>
+      <ul>
+        <li>Tel: 06 20 60 18 46</li>
+        <li>Email: 4vqXp@example.com</li>
+      </ul>
+      <p>© 2023 Hello-Diagnostic. Tous droits reserves</p>
+    </footer>
   </body>
 </html>
