--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
       <ul>
         <li>Accueil</li>
         <li>conatct</li>
-        <li>Qui sommes-nous</li>
+        <li>Présentation</li>
       </ul>
     </nav>
     <header>
       <img
-        src="https://via.placeholder.com/200"
+        src="logo.jpg"
         alt="logo en forme de maison et de téléphone en rouge et blanc"
       />
-      <h2>Vous vendez ou louez votre bien immobilier?</h2>
-      <h3>
-        Découvrez la confiance immobilière avec Diagnostic. Diagnostics
-        certifiés, service efficace. Valorisez votre bien en toute tranquillité
-      </h3>
-      <button>Contactez-nous</button>
+      <section class="profil">
+        <h2>Vous vendez ou louez votre bien immobilier?</h2>
+        <p>
+          Découvrez la confiance immobilière avec Diagnostic.<br />
+          Diagnostics certifiés, service efficace. Valorisez votre bien en toute
+          tranquillité
+        </p>
+        <button>Contactez-nous</button>
+      </section>
     </header>
     <main>
       <h2>Qui somme nous?</h2>
