--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <body>
     <nav>
       <h1>Hello Diagnostic</h1>
+      <img
+        class="logo-nav"
+        src="logo.jpg"
+        alt="logo en forme de maison et de téléphone en rouge et blanc"
+      />
       <ul>
         <li>Accueil</li>
         <li>conatct</li>
@@ -32,24 +37,35 @@
       </section>
     </header>
     <main>
-      <h2>Qui somme nous?</h2>
-      <p>
-        Bienvenue chez Hello Diagnostic, votre partenaire de confiance pour tous
-        vos besoins en diagnostic immobilier. Nous comprenons l'importance
-        cruciale d'une évaluation précise et complète de votre bien, que ce soit
-        pour la vente, la location ou simplement pour assurer la sécurité de
-        votre investissement. Chez Hello Diagnostic, notre équipe d'experts
-        certifiés met son savoir-faire au service de votre tranquillité
-        d'esprit. Avec un engagement inébranlable envers la qualité et la
-        rigueur, nous vous accompagnons à chaque étape, offrant des diagnostics
-        fiables et conformes aux normes les plus strictes. Faites de la
-        confiance, de la transparence et de l'efficacité les piliers de votre
-        expérience avec Hello Diagnostic, car votre patrimoine mérite une
-        expertise d'exception.
-      </p>
-      <a href="tel:+33620601846">📱Appellez-nous</a>
-      <a href="mailto:4vqXp@example.com">📧Ecrivez-nous</a>
+      <section class="activités"></section>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <section class="apropos">
+        <h2>Qui somme nous?</h2>
+        <p>
+          Bienvenue chez Hello Diagnostic, votre partenaire de confiance pour
+          tous vos besoins en diagnostic immobilier. Nous comprenons
+          l'importance cruciale d'une évaluation précise et complète de votre
+          bien, que ce soit pour la vente, la location ou simplement pour
+          assurer la sécurité de votre investissement. Chez Hello Diagnostic,
+          notre équipe d'experts certifiés met son savoir-faire au service de
+          votre tranquillité d'esprit. Avec un engagement inébranlable envers la
+          qualité et la rigueur, nous vous accompagnons à chaque étape, offrant
+          des diagnostics fiables et conformes aux normes les plus strictes.
+          Faites de la confiance, de la transparence et de l'efficacité les
+          piliers de votre expérience avec Hello Diagnostic, car votre
+          patrimoine mérite une expertise d'exception.
+        </p>
+        <a href="tel:+33620601846">📱Appellez-nous</a>
+        <a href="mailto:4vqXp@example.com">📧Ecrivez-nous</a>
+      </section>
     </main>
+
     <footer>
       <h3>Diagnostic Immobilier</h3>
       <ul>
