--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <i class="fa-solid fa-calendar-check"></i>
               <figcaption>
                 <h4>DISPONIBILITE</h4>
-                <p>Un service continuu pour répondre à vos besoins</p>
+                <p>Un service continu pour répondre à vos besoins</p>
               </figcaption>
             </figure>
           </li>
