footer class contact

--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@
 
     <footer>
       <h3>Diagnostic Immobilier</h3>
-      <ul>
-        <li><strong>Tel:</strong> 06.50.49.96.51</li>
-        <li><strong> Email:</strong> Diagnostic.Hello@gmail.com</li>
+      <ul class="contact">
+        <li>
+          <strong>Tel:</strong> <a href="tel:+33650499651"></a> 06.50.49.96.51
+        </li>
+        <li>
+          <strong> Email:</strong>
+          <a href="mailto:Diagnostic.Hello@gmail.com"></a>
+          Diagnostic.Hello@gmail.com
+        </li>
       </ul>
       <p>© 2023 Hello-Diagnostic. Tous droits reserves</p>
     </footer>
